# es-demo

./: .editorconfig  Dockerfile-auth  Dockerfile-gateway  README.md  docker-compose.yml
auth/: README.md  alembic.ini  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: eab0ca9e0899_create_email_signups_table.py  fee196f6ae3b_create_stored_events_table.py
auth/src/auth/: __main__.py  aggregates.py  app.py  gateways.py  resolvers.py  schema.graphql  schemas.py  tables.py
common/: .coveragerc  README.md  pyproject.toml
common/src/common/: aggregate.py  dal.py  exceptions.py  typing.py  uow.py
common/src/common/events/: __init__.py  base.py  impl.py  schema.py  serde.py
common/tests/: conftest.py  fake.py  test_aggregate.py  test_dal.py  test_events.py  test_uow.py
gateway/: app.js  package-lock.json  package.json
